--- a/.github/workflows/dadstamps.yml
+++ b/.github/workflows/dadstamps.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       id: deploy-function
-      uses: google-github-actions/deploy-cloud-functions@v0.1.0
+      - uses: google-github-actions/deploy-cloud-functions@v0.1.0
       with:
         name: get_categories
         runtime: nodejs10
