--- a/.github/workflows/dadstamps.yml
+++ b/.github/workflows/dadstamps.yml
@@ -4,7 +4,7 @@ jobs:
   deploy-cloud-functions:
     runs-on: ubuntu-latest
     steps:
-      id: deploy-function
+      - name: deploy-function
       - uses: google-github-actions/deploy-cloud-functions@v0.1.0
       with:
         name: get_categories
