--- a/.github/workflows/dadstamps.yml
+++ b/.github/workflows/dadstamps.yml
@@ -4,10 +4,8 @@ jobs:
   deploy-cloud-functions:
     runs-on: ubuntu-latest
     steps:
-      - name: deploy-function
-      uses: google-github-actions/deploy-cloud-functions@v0.1.0
+      - uses: google-github-actions/deploy-cloud-functions@v0.1.0
       with:
-        name: get_categories
         runtime: nodejs10
         project: ${{ secrets.GCLOUD_PROJECT_ID }}
         credentials: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
