Adding acction to deploy

--- a/.github/workflows/dadstamps.yml
+++ b/.github/workflows/dadstamps.yml
@@ -4,8 +4,9 @@ jobs:
   deploy-cloud-functions:
     runs-on: ubuntu-latest
     steps:
+    - name: deploy-functions
     - uses: google-github-actions/deploy-cloud-functions@v0.1.0
       with:
         runtime: nodejs10
-        project: ${{ secrets.GCLOUD_PROJECT_ID }}
+        project_id: ${{ secrets.GCLOUD_PROJECT_ID }}
         credentials: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
