--- a/.github/workflows/dadstamps.yml
+++ b/.github/workflows/dadstamps.yml
@@ -5,6 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
+    - name: npm install
+    run: npm install
     - uses: google-github-actions/deploy-cloud-functions@v0.1.0
       with:
         name: get_categories
