--- a/.github/workflows/dadstamps.yml
+++ b/.github/workflows/dadstamps.yml
@@ -5,11 +5,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - name: npm install
-      run: npm install
     - uses: google-github-actions/deploy-cloud-functions@v0.1.0
       with:
         name: get_categories
         runtime: nodejs10
+        entry_point: get_categgories
+        source_dir: ./
         project_id: ${{ secrets.GCLOUD_PROJECT_ID }}
         credentials: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
