--- a/.github/workflows/dadstamps.yml
+++ b/.github/workflows/dadstamps.yml
@@ -1,6 +1,20 @@
 name: dadstamps
 on: [push]
 jobs:
+  eslint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '14'
+      - run: npm ci # or yarn install
+      - uses: sibiraj-s/action-eslint@v1
+        with:
+          eslintArgs: '--ignore-path .gitignore --quiet'
+          extensions: 'js, jsx, ts, tsx'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   deploy-cloud-functions:
     runs-on: ubuntu-latest
     steps:
